--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-astroid==2.5.3
+apturl==0.5.2
 bcrypt==3.1.7
 blinker==1.4
 Brlapi==0.7.0
@@ -24,7 +24,6 @@ future==0.18.2
 gunicorn==20.1.0
 httplib2==0.14.0
 idna==2.8
-isort==5.8.0
 itsdangerous==1.1.0
 Jinja2==2.11.3
 keyring==18.0.1
@@ -32,13 +31,11 @@ language-selector==0.1
 launchpadlib==1.10.13
 lazr.restfulclient==0.14.2
 lazr.uri==1.0.3
-lazy-object-proxy==1.6.0
 lockfile==0.12.2
 louis==3.12.0
 macaroonbakery==1.3.1
 Mako==1.1.0
 MarkupSafe==1.1.0
-mccabe==0.6.1
 monotonic==1.5
 netifaces==0.10.4
 oauthlib==3.1.0
@@ -51,7 +48,6 @@ pycairo==1.16.2
 pycups==1.9.73
 PyGObject==3.36.0
 PyJWT==1.7.1
-pylint==2.7.4
 pymacaroons==0.13.0
 PyNaCl==1.3.0
 pyperclip==1.8.2
@@ -69,7 +65,6 @@ SecretStorage==2.3.1
 simplejson==3.16.0
 six==1.14.0
 systemd-python==234
-toml==0.10.2
 ubuntu-advantage-tools==20.3
 ubuntu-drivers-common==0.0.0
 ufw==0.36
@@ -79,5 +74,4 @@ usb-creator==0.3.7
 visitor==0.1.3
 wadllib==1.3.3
 Werkzeug==1.0.1
-wrapt==1.12.1
 xkit==0.0.0
