--- a/requirements.txt
+++ b/requirements.txt
@@ -68,7 +68,7 @@ systemd-python==234
 #ubuntu-advantage-tools==20.3
 #ubuntu-drivers-common==0.0.0
 #ufw==0.36
-unattended-upgrades==0.1
+#unattended-upgrades==0.1
 urllib3==1.25.8
 usb-creator==0.3.7
 visitor==0.1.3
