--- a/requirements.txt
+++ b/requirements.txt
@@ -70,7 +70,7 @@ systemd-python==234
 #ufw==0.36
 #unattended-upgrades==0.1
 urllib3==1.25.8
-usb-creator==0.3.7
+#usb-creator==0.3.7
 visitor==0.1.3
 wadllib==1.3.3
 Werkzeug==1.0.1
